--- a/app/views/admin/recommenders/_form.html.erb
+++ b/app/views/admin/recommenders/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
 
-  <div class="max-w-3xl mt-20 grid gap-9 grid-cols-min-contect-and-auto" data-controller="recommenders">
+  <div class="max-w-3xl mt-20 grid gap-9 grid-cols-min-contect-and-auto">
 
     <label class="self-center text-right" for="provider_department">登入單位</label>
     <select name="provider_department" id="departments" class="appearance-none recommender-form-select" disabled>
@@ -23,8 +23,7 @@
     <%= form.label :provider_email, class: "recommender-form-label"%>
     <%= form.email_field :provider_email, class: "recommender-form-input", placeholder: "教師通訊電郵", required: true %>
 
-    <%= form.label :category, class: "recommender-form-label" %>
-    <%= form.select :category, all_categories_options(recommender.category), {}, class: "recommender-form-select", 'data-recommenders-target': 'category', 'data-action': 'recommenders#changeVisible' %>
+    <%= react_component("CategorySelector", {}, class: "contents") %>
 
     <%= form.text_with_label_field :title, placeholder: "Title" %>
 
@@ -37,26 +36,26 @@
 
     <%= form.text_with_label_field :job_title, placeholder: "Position" %>
 
-    <div class="contents" data-recommenders-target="academic">
+    <div class="contents academic">
       <%= form.text_with_label_field :department, placeholder: "Department", required: false %>
     </div>
 
-    <div class="contents" data-recommenders-target="academic">
+    <div class="contents academic">
       <%= form.label :institution_id, class: "recommender-form-label"%>
       <%= form.select :institution_id, all_institutions_options(recommender.institution_id), {}, class: "recommender-form-select", placeholder: "請選擇"%>
     </div>
 
-    <div class="contents" data-recommenders-target="industry">
+    <div class="contents industry">
       <%= form.label :industry_id, class: "recommender-form-label" %>
       <%= form.select :industry_id, all_industries_options(recommender.industry_id), {}, class: "recommender-form-select", placeholder: "請選擇"%>
     </div>
 
-    <div class="contents" data-recommenders-target="industry">
+    <div class="contents industry">
       <%= label_tag 'company', 'Company Name(公司名稱)', class: 'recommender-form-label' %>
-      <%= recommender_text_field_tag('company', 'data-recommenders-target': "company") %>
+      <%= recommender_text_field_tag('company') %>
     </div>
 
-    <div class="contents" data-recommenders-target="industry">
+    <div class="contents industry">
       <%= label_tag 'country', 'Country(所屬國家)', class: 'recommender-form-label' %>
       <select name="country" id="country" class="recommender-form-input">
         <%= all_countries_options(recommender.institution&.country&.id) %>
