--- a/app/views/admin/recommenders/_table.html.erb
+++ b/app/views/admin/recommenders/_table.html.erb
@@ -3,8 +3,8 @@
   <table class="w-full text-sm text-left text-gray-500" >
     <thead class="text-xs text-gray-700 uppercase bg-gray-50" >
       <tr>
-        <th scope="col" class="recommender-table-th" >最後更新時間</th>
-        <th scope="col" class="recommender-table-th" >登入單位</th>
+        <th scope="col" class="recommender-table-th" >提報時間</th>
+        <th scope="col" class="recommender-table-th" >提報單位</th>
         <th scope="col" class="recommender-table-th" >提供此名單之教師姓名</th>
         <th scope="col" class="recommender-table-th" >提供此名單之教師電郵</th>
         <th scope="col" class="recommender-table-th" >Category<br>名單種類</th>
@@ -29,7 +29,7 @@
     <tbody>
       <% recommenders.each do |recommender| %>
         <tr class="border-b odd:bg-white even:bg-gray-50" >
-          <td class="recommender-table-td"><%= recommender.updated_at.strftime('%Y-%m-%d %H:%M:%S')  %></td>
+          <td class="recommender-table-td"><%= recommender.updated_at.strftime('%Y-%m-%d')  %></td>
           <td class="recommender-table-td"><%= NtustDepartment.includes(users: :recommenders).where(recommenders: { id: recommender.id }).pluck(:name).join("\n") %></td>
           <td class="recommender-table-td"><%= recommender.provider_name %></td>
           <td class="recommender-table-td"><%= recommender.provider_email %></td>
